--- a/test.html
+++ b/test.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Page</title>
     <link rel="stylesheet" href="assets/bootstrap.min.css">
@@ -14,6 +13,7 @@
     <div class="alert alert-primary" role="alert">
         <i class="bi bi-exclamation-triangle-fill"></i>
         <span class="align-middle">Text1</span>
+        <span class="align-middle">Text2</span>
     </div>    
 
 </body>
