--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Page</title>
+    <title>Test Page 3</title>
     <link rel="stylesheet" href="assets/bootstrap.min.css">
     <link rel="stylesheet" href="assets/bootstrap-icons-1.3.0/bootstrap-icons.css">
     <script defer src="assets/bootstrap.bundle.min.js"></script>  
@@ -14,6 +14,7 @@
         <i class="bi bi-exclamation-triangle-fill"></i>
         <span class="align-middle">Text1</span>
         <span class="align-middle">Text2</span>
+        <span class="align-middle">Text3</span>
     </div>    
 
 </body>
