--- a/test.html
+++ b/test.html
@@ -14,6 +14,7 @@
         <i class="bi bi-exclamation-triangle-fill"></i>
         <span class="align-middle">Text1</span>
         <span class="align-middle">Text2</span>
+        <span class="align-middle">Text3</span>
     </div>    
 
 </body>
